--- a/package.json
+++ b/package.json
@@ -11,20 +11,34 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.5.1",
     "@react-email/render": "^1.2.1",
+    "@tiptap/extension-document": "^3.4.1",
+    "@tiptap/extension-paragraph": "^3.4.1",
+    "@tiptap/extension-text": "^3.4.1",
+    "@tiptap/extension-text-style": "^3.4.1",
+    "@tiptap/pm": "^3.4.1",
+    "@tiptap/react": "^3.4.1",
+    "@tiptap/starter-kit": "^3.4.1",
     "better-auth": "^1.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
+    "nuqs": "^2.6.0",
     "pg": "^8.16.3",
     "postmark": "^4.0.5",
     "prettier": "^3.6.2",
@@ -33,6 +47,7 @@
     "react-email": "^4.2.8",
     "react-hook-form": "^7.62.0",
     "resend": "^6.0.2",
+    "sass": "^1.92.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
@@ -50,5 +65,6 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
